v0.3.3 : fixed layout issues and simplified layout

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -107,20 +107,20 @@ select {
 /* COMPOSITION: Macrolevel design choises that defines the skeleton of the webpage and basic composition within components */
 /* Page Layout choices */
 .banner {
-    height: 11rem;
+    /* height: 11rem; */
 }
 /* Component Layout choices */
 .banner__logo {
     width: 12rem;
 }
 
-.header__main-photos {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-}
 
 .header__photos {
     width: fit-content;
+}
+
+.header__photo {
+    display: inline-block;
 }
 
 .main-content__paragraph {
@@ -129,6 +129,7 @@ select {
 
 /* UTILITIES: One job, done well. It performs one logical job: formatting, design, shape, font and element colours  */
 .banner-background {
+    padding-top: 7rem;
     background-color: var(--clr-primary);
     background-image: url(../images/pattern.png);
 }
@@ -150,9 +151,12 @@ select {
 }
 
 .related-content__article__1 {
-    padding: 5rem;
+    /* padding: 5rem; */
+    width: 400px;
+    height: 300px;
     background-image: url(../images/monitor.jpg);
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .related-content__article__2 {
